change background color of hover

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,6 @@ ul.theList {
 }
  
 .todoListMain .theList li:hover {
-  background-color: pink;
+  background-color: white;
   cursor: pointer;
 }
